cache 할 API 와 캐시 이름을 명시합니다

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,4 @@ spring.jpa.hibernate.ddl-auto=create
 spring.h2.console.enabled=true
 spring.h2.console.path=/console
 
+spring.cache.cache-names=artist,artistInfo
